<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:text="@string/btn_start"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/layout_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2.5dp"
                        android:gravity="center"
                        android:text="@string/tv_info"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tv_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="50sp" />

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_centerInParent="true">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:max="100"
                        android:progressDrawable="@drawable/progress_drawable" />

                    <TextView
                        android:id="@+id/tv_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="2.5dp"
                        android:gravity="center"
                        android:textColor="@color/colorAccent" />

                </RelativeLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_km"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_stepsSaved"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_forceDBUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:padding="1dp"
                        android:text="@string/btn_forceDBUpdate"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:hint="@string/et_weight" />

                    <EditText
                        android:id="@+id/edit_height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:hint="@string/et_height" />

                    <Button
                        android:id="@+id/btn_updateData"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2.5dp"
                        android:layout_weight="0.5"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="1dp"
                        android:text="@string/btn_updateData"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/btn_goToMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_map"
                    android:textColor="@color/colorAccent" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_congrats1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2.5dp"
                        android:gravity="center"
                        android:text="@string/tv_congrats1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tv_congrats2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:gravity="center"
                        android:text="@string/tv_congrats2"
                        android:textColor="@color/colorPrimaryDark"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>